(ui) Fix issues with toggle property buttons on high contrast theme

--- a/src/app/shared/components/misc/formly-field-ckeditor/formly-field-ckeditor.component.scss
+++ b/src/app/shared/components/misc/formly-field-ckeditor/formly-field-ckeditor.component.scss
@@ -60,7 +60,7 @@
       margin-top: 10px;
 
       span {
-        color: var(--white) !important;
+        color: var(--textOnAccentColor) !important;
         text-shadow: none !important;
       }
     }
